Fixing some alignment with first menu item with header and navbar-brand class

--- a/css/less/navigation.less
+++ b/css/less/navigation.less
@@ -7,6 +7,10 @@
 .navbar {
   margin-bottom: 0;
 
+  .navbar-brand {
+    padding: 0;
+  }
+
   .navbar-nav.nav-pills > li > a {
       padding: 14px 8px;
   }
