--- a/css/less/theme-responsive.less
+++ b/css/less/theme-responsive.less
@@ -10,6 +10,10 @@
 // Smartphones
 @media (max-width: 480px) {
 
+  .navbar-brand {
+    float: none;
+  }
+
   #hgroup {
     text-align: center;
   }
@@ -276,11 +280,11 @@
   .navbar .navbar-nav > li {
 
     &:first-child {
-      margin-left: -10px;
+      margin-left: -15px;
     }
 
     &:last-child {
-      margin-right: -10px;
+      margin-right: -5px;
     }
   }
 
